--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": "https://github.com/pkorchagin/command-pattern.git",
   "author": "Philip <korchagin.philip@gmail.com>",
   "homepage": "https://typescript.pp.ua",
-  "license": "UNLICENSED",
+  "license": "GPL",
   "keywords": [
     "typescript",
     "command",
@@ -16,8 +16,8 @@
     "typescript.pp.ua"
   ],
   "scripts": {
-    "build": "tsc",
     "start": "nodemon -e ts --exec 'ts-node' src/index.ts",
+    "build": "tsc",
     "start:composition": "nodemon -e ts --exec 'ts-node' src/index.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
