--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "command-pattern",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Command pattern. Simple example on typescript.",
   "main": "src/index.ts",
   "repository": "https://github.com/pkorchagin/command-pattern.git",
   "author": "Philip <korchagin.philip@gmail.com>",
-  "homepage": "https://typescript.pp.ua",
+  "homepage": "https://github.com/pkorchagin/command-pattern",
   "license": "GPL",
   "keywords": [
     "typescript",
@@ -16,10 +16,9 @@
     "typescript.pp.ua"
   ],
   "scripts": {
-    "start": "nodemon -e ts --exec 'ts-node' src/index.ts",
+    "start": "nodemon -e ts --exec 'yarn run lint & ts-node' src/index.ts",
     "build": "tsc",
-    "start:composition": "nodemon -e ts --exec 'ts-node' src/index.ts",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+    "lint": "eslint \"src/**/*.ts\" --fix"
   },
   "devDependencies": {
     "@types/node": "^17.0.2",
